--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is the Heading.</h1>
     <p>This is First Paragraph.</p>
     <p>This is second paragraph.</p>
+    <p>This is Third paragraph.</p>
 </body>
 </html>
