--- a/index.html
+++ b/index.html
@@ -87,13 +87,86 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning"
+                    <!--<a role="button" class="btn btn-block nav-link btn-warning"
                     data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                    data-placement="bottom" href="#reserveform">Reserve Table</a>
+                    data-placement="bottom" href="#reserveform">Reserve Table</a>-->
+                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reservationFormModal" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div id="reservationFormModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-md-10">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-secondary active">
+                                        <input type="radio" name="nbPeople" value="1" autocomplete="off" checked> 1
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="2" autocomplete="off"> 2
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="3" autocomplete="off"> 3
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="4" autocomplete="off"> 4
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="5" autocomplete="off"> 5
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="6" autocomplete="off"> 6
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-md-2 col-form-label">Section</label>
+                            <div class="col-md-4">
+                                <div class="btn-group" data-toggle="buttons">
+                                  <label class="btn btn-success active">
+                                    <input style="visibility: hidden;" type="radio" name="section" value="nonsmoking" autocomplete="off" checked><nobr> Non-Smoking </nobr>
+                                  </label>
+                                  <label class="btn btn-danger">
+                                    <input style="visibility: hidden;" type="radio" name="section" value="smoking" autocomplete="off"> Smoking
+                                  </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <input class="form-control" type="hour" name="hourBooking" value="" placeholder="Time">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row row-content">
         <div class="container">
