--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 
@@ -31,9 +31,13 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul> 
-                <span class="navbar-text">
+                <!--<span class="navbar-text">
                     <a data-toggle="modal" data-target="#loginModal">
                     <span class="fa fa-sign-in"></span> Login</a>
+                </span>-->
+                <span class="navbar-text">
+                    <a id="buttonLogin" type="button" role="button">
+                        <span class="fa fa-sign-in"></span> Login</a>
                 </span>   
            </div>        
         </div>
@@ -90,7 +94,8 @@
                     <!--<a role="button" class="btn btn-block nav-link btn-warning"
                     data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
                     data-placement="bottom" href="#reserveform">Reserve Table</a>-->
-                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reservationFormModal" role="button">Reserve Table</a>
+                    <!--<a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reservationFormModal" role="button">Reserve Table</a>-->
+                    <a id="buttonReservation" type="button" class="btn btn-warning btn-sm btn-block" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -215,13 +220,14 @@
                 <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon"></span>
                 </a>
-                <div class="btn-group" id="carouselButton">
-                    <!--<button class="btn btn-danger btn-sm" id="carousel-pause">
+            <!--<div class="btn-group" id="carouselButton">
+                    <button class="btn btn-danger btn-sm" id="carousel-pause">
                 	    <span class="fa fa-pause"></span>
                     </button>
                     <button class="btn btn-danger btn-sm" id="carousel-play">
                 	    <span class="fa fa-play"></span>
-                    </button>-->
+                    </button>
+                    </div>-->
                     <button class="btn btn-danger btn-sm" id="carouselButton">
                         <span id="carousel-button-icon" class="fa fa-pause"></span>
                     </button>
@@ -389,20 +395,10 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
+            /*$('[data-toggle="tooltip"]').tooltip();*/
 
-        /*$(document).ready(function(){
             $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carousel-pause").click(function(){
-                $("#mycarousel").carousel('pause');
-            });
-            $("#carousel-play").click(function(){
-                $("#mycarousel").carousel('cycle');
-            });
-        });*/
-
-        $("#carouselButton").click(function(){
+            $("#carouselButton").click(function(){
                 if ($("#carouselButton").children("span").hasClass('fa-pause')) {
                     $("#mycarousel").carousel('pause');
                     $("#carouselButton").children("span").removeClass('fa-pause');
@@ -414,6 +410,25 @@
                     $("#carouselButton").children("span").addClass('fa-pause');                    
                 }
             });
+
+                $("#buttonLogin").click(function(){
+                    $('#loginModal').modal('show');
+                });
+
+                $("#buttonReservation").click(function(){
+                    $('#reservationFormModal').modal('show');
+                });
+        });
+
+        /*$(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 2000 } );
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+        });*/
 
     </script>
 
